--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-sm-4 mb-3">
-            <div class="card" style="">
+            <div class="card">
               <img src="img/1.jpg" class="card-img-top" alt="project 1">
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div class="col-sm-4 mb-3">
-            <div class="card" style="">
+            <div class="card">
               <img src="img/6.jpg" class="card-img-top" alt="project 2">
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -98,7 +98,7 @@
             </div>
           </div>
           <div class="col-sm-4 mb-3">
-            <div class="card" style="">
+            <div class="card">
               <img src="img/3.jpg" class="card-img-top" alt="project 3">
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -106,7 +106,7 @@
             </div>
           </div>
           <div class="col-sm-4 mb-3">
-            <div class="card" style="">
+            <div class="card">
               <img src="img/3.jpg" class="card-img-top" alt="project 3">
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="col-sm-4 mb-3">
-            <div class="card" style="">
+            <div class="card">
               <img src="img/4.jpg" class="card-img-top" alt="project 4">
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -150,7 +150,7 @@
                 <label for="pesan" class="form-label">Pesan</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn btn-succes">Kirim</button>
             </form>
           </div>
         </div>
